# MyWatchList

./: .gitignore  Cargo.toml  TODO.txt  anilist_data.jsonl  python-anilist-fetch.py
backend/: Cargo.toml  anime.db-shm  anime.db-wal  anime.sql  python-anilist-fetch.py
backend/src/: add_to_list.rs  authenticate.rs  details.rs  fetch_list.rs  initialize.rs  login.rs  main.rs  popularity.rs  search.rs  sign_up.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: details_page.css  main.css  search_page.css
frontend/src/: details.rs  login_page.rs  login_popup.rs  main.rs  popup_add_anime.rs  router.rs  search_page.rs
frontend/stylesheets/: details_page.css  login_page.css  search_page.css
src/: Initialize.rs  basic_search.rs  global_db.rs  main.rs
