[package]
name = "my-watch-list"
version = "0.1.0"
authors = ["techy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
actix-web = "4.11.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = {version = "1.45.1", features = ["full"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
