[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = {version = "1.45.1", features = ["full"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
actix-cors = "0.7.1"
